--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -376,6 +376,17 @@
             }
         }
     },
+    "Koala.view.window.LayerSetChooserWindow": {
+        "config": {
+            "data": {
+                "title": "EN: Layer Profilwahl",
+                "helpText": {
+                    "html": "<div>EN: Dieses Auswahlfenster ermöglicht es, thematisch zusammengehörige Datensätze mit einem Klick in die Karte zu laden. Es ist nicht zwingend erforderlich eine Profilwahl zu treffen um die Anwendung zu starten.</div>"+
+                    "<div>Wird das Fenster ohne Profilwahl geschlossen (mit \"x\" rechts oben), werden lediglich die Hintergrundkarte, Ortsnamen und Höhenlinien geladen. Das Fenster lässt sich im Menü mit \"Thema wechseln\" wieder öffnen.</div>"
+                }
+            }
+        }
+    },
     "Koala.view.window.MetadataInfo": {
         "config": {
             "data": {
