bugfix of lyrSetChooser help panel

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -338,10 +338,8 @@
         "config": {
             "data": {
                 "title": "Layer Profilwahl",
-                "helpText": {
-                    "html": "<div>Dieses Auswahlfenster ermöglicht es, thematisch zusammengehörige Datensätze mit einem Klick in die Karte zu laden. Es ist nicht zwingend erforderlich eine Profilwahl zu treffen um die Anwendung zu starten.</div>"+
-                    "<div>Wird das Fenster ohne Profilwahl geschlossen (mit \"x\" rechts oben), werden lediglich die Hintergrundkarte, Ortsnamen und Höhenlinien geladen. Das Fenster lässt sich im Menü mit \"Thema wechseln\" wieder öffnen.</div>"
-                }
+                "helpHtml": "<div>Dieses Auswahlfenster ermöglicht es, thematisch zusammengehörige Datensätze mit einem Klick in die Karte zu laden. Es ist nicht zwingend erforderlich eine Profilwahl zu treffen um die Anwendung zu starten.</div>"+
+                            "<div>Wird das Fenster ohne Profilwahl geschlossen (mit \"x\" rechts oben), werden lediglich die Hintergrundkarte, Ortsnamen und Höhenlinien geladen. Das Fenster lässt sich im Menü mit \"Thema wechseln\" wieder öffnen.</div>"
             }
         }
     },
