--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -397,6 +397,7 @@
             "data": {
                 "title": "Barchart",
                 "undoBtnText": "…zurückzoomen",
+                "uncertaintyCheckboxLabel": "Messungenauigkeit",
                 "exportAsImageBtnText": "Als Bild exportieren"
             }
         }
