--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -396,6 +396,7 @@
             "data": {
                 "title": "Bar Chart",
                 "undoBtnText": "…zoom back",
+                "uncertaintyCheckboxLabel": "Uncertainty",
                 "exportAsImageBtnText": "Export as image"
             }
         }
