--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -379,6 +379,7 @@
             "data": {
                 "title": "fr:Barchart",
                 "undoBtnText": "fr:…zurückzoomen",
+                "uncertaintyCheckboxLabel": "fr:Messungenauigkeit",
                 "exportAsImageBtnText": "fr:Als Bild exportieren"
             }
         }
