Address notes of @mjansen. Thx for review.

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -80,6 +80,7 @@
     "Koala.view.component.D3BarChart": {
         "config": {
             "data": {
+                "belowDetectionLimitLabel": "< LDL",
                 "noDataAvailableText": "There is no data available for the specified time range. Please select a different period."
             }
         }
