changed introductory note to welcome

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -399,9 +399,9 @@
         "config": {
             "data": {
                 "preface":{
-                    "title": "Vorbemerkung",
+                    "title": "Willkommen",
                     "html": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'>"+
-                            "<h2> Vorbemerkung </h2>"+
+                            "<h2> Willkommen </h2>"+
                             "<div>Das "+
                             "<a href='http://www.bfs.de/DE/home/home_node.html' target='_blank'>Bundesamt für Strahlenschutz (BfS)</a>"+
                             " stellt mit dem "+
@@ -997,7 +997,7 @@
         "config": {
             "data": {
                 "title": "Hilfe",
-                "helpPrefaceTitle": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'><br /><h1 style='font-weight:bold; font-size:16px; color:black'>Vorbemerkung</h1>",
+                "helpPrefaceTitle": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'><br /><h1 style='font-weight:bold; font-size:16px; color:black'>Willkommen</h1>",
                 "helpPrefaceHtml":
                     "<div>Das "+
                     "<a href='http://www.bfs.de/DE/home/home_node.html' target='_blank'>Bundesamt für Strahlenschutz (BfS)</a>"+
