--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -399,9 +399,9 @@
         "config": {
             "data": {
                 "preface":{
-                    "title": "Introductory Note",
+                    "title": "Welcome",
                     "html": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'>"+
-                            "<h2> Introductory Note </h2>"+
+                            "<h2> Welcome </h2>"+
                             "<div>The "+
                             "<a href='http://www.bfs.de/EN/home/home_node.html' target='_blank'>Federal Office for Radiation Protection (BfS)</a>"+
                             " provides with the "+
@@ -982,7 +982,7 @@
         "config": {
             "data": {
                 "title": "Help",
-                "helpPrefaceTitle": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'><br /><h1 style='font-weight:bold; font-size:16px; color:black'>Introductory Note</h1>",
+                "helpPrefaceTitle": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'><br /><h1 style='font-weight:bold; font-size:16px; color:black'>Welcome</h1>",
                 "helpPrefaceHtml":
                     "<div>The "+
                     "<a href='http://www.bfs.de/EN/home/home_node.html' target='_blank'>Federal Office for Radiation Protection (BfS)</a>"+
